fix(web): Dark mode styling

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -6,7 +6,7 @@ body {
 	color: var(--color-gray-800);
 
 	@media (prefers-color-scheme: dark) {
-		color: var(--color-gray-50);
+		color: var(--color-gray-200);
 	}
 }
 
